--- a/curso_app/templates/index.html
+++ b/curso_app/templates/index.html
@@ -38,7 +38,7 @@
                         <th>{{curso.name}}</th>
                         <th>{{curso.description}}</th>
                         <th>{{curso.updated_at}}</th>
-                        <th>Hola</th>
+                        <th><a href="course/{{curso.id}}">Remove</a></th>
                     </tr>
                     {% endfor %}
                 </tbody>
